[gd_scene load_steps=7 format=2]

[ext_resource path="res://PowerUps/PressureButton.gd" type="Script" id=1]
[ext_resource path="res://Sounds/pressure-button.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sprites/pessure_button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/pessure_button_back.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.2206, 2.03886 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.5829, 8.46996 )

[node name="PressureButton" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.146806, -10.8781 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="ProgressBar" type="TextureProgress" parent="StaticBody2D/CollisionShape2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -9.0
margin_right = 35.0
margin_bottom = 9.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_PressureButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PressureButton_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
